<?xml version="2.0"?>
<package format="3">
  <name>eskf</name>
  <version>0.0.1</version>
  <description>Error state kalman filter for position and attitude determination</description>

  <maintainer email="elias.tarasov@gmail.com">etarasov</maintainer>
  <author>Elia Tarasov</author>
  <license>Apache 2</license>

    <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
